# console-translator

./: README.md  cli.py  pyproject.toml  runner.py  setup.py
.github/workflows/: python.yml
console/: engine.py  filters.py  init.py  keywords.py  stdout_hook.py  translate.py  translator.py
console_translator/: __init__.py  filters.py  stdout_hook.py
