[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "console-translator"
version = "0.1.0"
description = "Translate console output and error messages into human-readable language"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Ryouse1"}
]

dependencies = []

[tool.setuptools.packages.find]
where = ["."]
