[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "console-translator"
version = "1.0.0"
description = "Translate all console output into any language safely"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Ryouse1"}]

dependencies = [
  "deep-translator",
  "langdetect"
]

[tool.setuptools.packages.find]
where = ["."]
